--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Tic Tac Toe - TOP</title>
     <link rel="stylesheet" href="style.css">
     <script src="tic_tac_toe.js" defer></script>
+    <script src="tic_tac_toe_display.js" defer></script>
 </head>
 <body>
    <p>Hello world.</p> 
