add click functionality to play add swap colours to active player

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="tic_tac_toe_display.js" defer></script>
 </head>
 <body>
-    <div class="tic-tac-toe">
+    <div id="tic-tac-toe">
         <div class="player-tab player-1">
             <div class="name">Player</div>
             <div class="player-icon">
@@ -17,7 +17,7 @@
             </div>
             <div class="score">Score 0</div>
         </div>
-        <div class="player-tab player-2">
+        <div class="player-tab player-2 inactive-player">
             <div class="name">Player</div>
             <div class="player-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>alpha-o</title><path d="M11,7A2,2 0 0,0 9,9V15A2,2 0 0,0 11,17H13A2,2 0 0,0 15,15V9A2,2 0 0,0 13,7H11M11,9H13V15H11V9Z" /></svg>
